--- a/Shal.html
+++ b/Shal.html
@@ -151,7 +151,7 @@
                 <div class="row custom-row-mx-15">
                     <div class="col-1">
                         <!-- Add Arrows -->
-                        <div class="swiper-button-prev"><img src="./img/main-btnL.png" alt=""></div>
+                        <div class="swiper-button-prev"><img src="./img/main/main-btnL.png" alt=""></div>
                     </div>
                     <div class="col-10 m-auto">
                         <!-- Swiper: Loop Mode with Multiple Slides Per Group -->
@@ -168,7 +168,7 @@
                     </div>
                     <div class="col-1">
                         <!-- Add Arrows -->
-                        <div class="swiper-button-next"><img src="./img/main-btnR.png" alt=""></div>
+                        <div class="swiper-button-next"><img src="./img/main/main-btnR.png" alt=""></div>
                     </div>
                 </div>
             </div>
