--- a/Shal.html
+++ b/Shal.html
@@ -7,13 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>鐵支路支線</title>
 
+    <!-- Web Font -->
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC|Share+Tech+Mono&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Link Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
+        integrity="sha256-PHcOkPmOshsMBC+vtJdVr5Mwb7r0LkSVJPlPrp/IMpU=" crossorigin="anonymous" />
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-    <!-- Web Font -->
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC|Share+Tech+Mono&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/main_style.css">
     <link rel="stylesheet" href="./css/Shal_style.css">
@@ -65,12 +68,15 @@
         <section>
             <div class="container section1">
                 <div class="row custom-row-mx-15 img-main-digibar">
-                    <div class="col-9"></div>
-                    <div class="col-1"></div>
+                    <div class="col-9 m-auto marquee"></div>
+                    <div class="col-1 m-auto localweather"></div>
                     <div class="col-2 localtime"></div>
                 </div>
-                <div class="row custom-row-mx-15">
-                    <div class="col img-main-map"></div>
+                <div class="row custom-row-mx-15 justify-content-center">
+                    <div class="col-1 img-main-map station-start"><p class="m-0 ml-4">中洲站</p></div>
+                    <div class="col-1 img-main-map station-arrow"></div>
+                    <div class="col-1 img-main-map station-stops"><p class="m-0 ml-4">長榮大學站</p></div>
+                    <div class="col-1 img-main-map station-end"><p class="m-0 ml-4">沙崙站</p></div>
                 </div>
             </div>
         </section>
@@ -106,7 +112,7 @@
                     <div class="col-6 img-Shal-chimeTitle02"></div>
                 </div>
                 <div class="row custom-row-mx-15">
-                    <div class="col-12 img-Shal-chime01"></div>
+                    <div class="col-12 rounded img-Shal-chime01"></div>
                 </div>
                 <div class="row custom-row-mx-15 text-Shal-chime01 text-justify">
                     <div class="col">
@@ -119,7 +125,7 @@
         <!-- 版型B -->
         <section>
             <div class="container section4">
-                <div class="row custom-row-mx-15 img-Shal-chime02">
+                <div class="row custom-row-mx-15 rounded img-Shal-chime02">
                     <div class="col-4 m-auto text-Shal-chime02 text-justify">
                         <p class="m-0">安置於博物館建築物最高點的「榮耀天使」雕塑，是臨摹法國雕塑家路易‧巴里亞斯(Louis-Ernest
                             Barrias)的作品，這座手持桂冠和號角的榮耀天使，將永遠佇立於奇美館建築的最頂端，象徵守護這塊土地，榮耀世間的美好人事物。在2015年開幕的台南都會公園奇美博物館，主建築正面全長150公尺寬，高42公尺，耗資13億，是奇美集團的許文龍先生建造完成後捐贈給台南市的大禮物，開幕後也成為全台灣遊客甚至是國外遊客的必到之處。
@@ -141,7 +147,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="row custom-row-mx-15 img-Shal-cjcu01">
+                <div class="row custom-row-mx-15 rounded img-Shal-cjcu01">
                 </div>
             </div>
         </section>
@@ -157,12 +163,12 @@
                         <!-- Swiper: Loop Mode with Multiple Slides Per Group -->
                         <div class="swiper-container">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide img-main-btn">Slide 1</div>
-                                <div class="swiper-slide img-main-btn">Slide 2</div>
-                                <div class="swiper-slide img-main-btn">Slide 3</div>
-                                <div class="swiper-slide img-main-btn">Slide 4</div>
-                                <div class="swiper-slide img-main-btn">Slide 5</div>
-                                <div class="swiper-slide img-main-btn">Slide 6</div>
+                                <div class="swiper-slide img-main-btn img-btn-Neiw"></div>
+                                <div class="swiper-slide img-main-btn img-btn-Liuj"></div>
+                                <div class="swiper-slide img-main-btn img-btn-Jiji"></div>
+                                <div class="swiper-slide img-main-btn img-btn-Shal"></div>
+                                <div class="swiper-slide img-main-btn img-btn-Shen"></div>
+                                <div class="swiper-slide img-main-btn img-btn-Ping"></div>
                             </div>
                         </div>
                     </div>
