--- a/Shal.html
+++ b/Shal.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>鐵支路支線</title>
+    <title>鐵支路 | 沙崙支線</title>
 
     <!-- Web Font -->
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC|Share+Tech+Mono&display=swap" rel="stylesheet">
@@ -26,7 +26,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark nav-white">
             <div class="container">
-                <a class="navbar-brand p-0 img-logo" href="#"></a>
+                <a class="navbar-brand p-0" href="./index.html">
+                    <img src="./img/logo.png" alt="鐵路 支線 鐵支路 Logo"></a>
                 <!-- 漢堡條 -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -37,30 +38,29 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="#">內灣線</a>
+                            <a class="nav-link px-3" href="./Neiw.html">內灣線</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="#">六家線</a>
+                            <a class="nav-link px-3" href="./Liuj.html">六家線</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="#">集集線</a>
+                            <a class="nav-link px-3" href="./Jiji.html">集集線</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="#">沙崙線</a>
+                            <a class="nav-link px-3" href="./Shal.html">沙崙線</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="#">深澳線</a>
+                            <a class="nav-link px-3" href="./Shen.html">深澳線</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="#">平溪線</a>
+                            <a class="nav-link px-3" href="./Ping.html">平溪線</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="#">旅客服務</a>
+                            <a class="nav-link px-3" href="./Service.html">旅客服務</a>
                         </li>
                     </ul>
                 </div>
             </div>
-
         </nav>
     </header>
     <main>
@@ -73,10 +73,21 @@
                     <div class="col-2 localtime"></div>
                 </div>
                 <div class="row custom-row-mx-15 justify-content-center">
-                    <div class="col-1 img-main-map station-start"><p class="m-0 ml-4">中洲站</p></div>
-                    <div class="col-1 img-main-map station-arrow"></div>
-                    <div class="col-1 img-main-map station-stops"><p class="m-0 ml-4">長榮大學站</p></div>
-                    <div class="col-1 img-main-map station-end"><p class="m-0 ml-4">沙崙站</p></div>
+                    <div class="col-3 img-main-map">
+                        <img src="./img/Shal/Shal-staBtn1st.png" alt="沙崙線 中洲站">
+                        <p class="m-0 ml-4">中洲站</p>
+                    </div>
+                    <div class="col-2 img-main-map">
+                        <img src="./img/Shal/Shal-staBtnArrow.png" alt="經由">
+                    </div>
+                    <div class="col-3 img-main-map">
+                        <img src="./img/Shal/Shal-staBtn1st.png" alt="沙崙線 長榮大學站">
+                        <p class="m-0 ml-4">長榮大學站</p>
+                    </div>
+                    <div class="col-2 img-main-map">
+                        <img src="./img/Shal/Shal-staBtnlast.png" alt="沙崙線 沙崙站">
+                        <p class="m-0 ml-4">沙崙站</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -84,7 +95,9 @@
         <section>
             <div class="container-fluid img-main-bgi">
                 <div class="container section2">
-                    <div class="row custom-row-mx-15 img-main-title"></div>
+                    <div class="row custom-row-mx-15 ">
+                        <img src="./img/Shal/main-Shal-title.png" alt="沙崙支旅">
+                    </div>
                     <div class="row custom-row-mx-15 text-main-cotent text-justify">
                         <div class="col">
                             <p><span>|</span>臺鐵為了方便旅客轉乘高鐵，於民國100年1月2日正式啟用，臺鐵沙崙線列車取代原本搭高鐵接駁巴士，交通時間由原本50分鐘縮短至22分鐘。沙崙線全程皆為高架，還開了首例橫跨國道一號，為臺鐵捷運化轉型實例。特別的是路線還經過長榮大學內，還能搭到別具臺南特色的彩繪圖案列車，讓你的接駁時刻更有樂趣！
@@ -93,12 +106,12 @@
                     </div>
                     <div class="row custom-row-mx-15">
                         <div class="col">
-                            <img class="img-main-km" src="./img/Shal/main-Shal-km.png" alt="">
+                            <img class="img-main-km" src="./img/Shal/main-Shal-km.png" alt="支線總長為5.3公里">
                         </div>
                     </div>
                     <div class="row custom-row-mx-15">
                         <div class="col img-main-line">
-                            <img class="img-main-train" src="./img/Shal/main-Shal-train.png" alt="">
+                            <img class="img-main-train" src="./img/Shal/main-Shal-train.png" alt="台鐵列車">
                         </div>
                     </div>
                 </div>
@@ -107,12 +120,18 @@
         <!-- 版型A -->
         <section>
             <div class="container section3">
-                <div class="row custom-row-mx-15 justify-content-between">
-                    <div class="col-6 img-Shal-chimeTitle01"></div>
-                    <div class="col-6 img-Shal-chimeTitle02"></div>
+                <div class="row custom-row-mx-15">
+                    <div class="col-6">
+                        <img src="./img/Shal/Shal-chimeTitle01.png" alt="壯觀的奇美博物館">
+                    </div>
+                    <div class="col-6">
+                        <img src="./img/Shal/Shal-chimeTitle02.png" alt="支線沙崙站 轉乘 西部幹線保安站">
+                    </div>
                 </div>
                 <div class="row custom-row-mx-15">
-                    <div class="col-12 rounded img-Shal-chime01"></div>
+                    <div class="col-12 rounded img-Shal-chime01">
+                        <img src="./img/Shal/Shal-chime01.jpg" alt="夜晚的奇美博物館">
+                    </div>
                 </div>
                 <div class="row custom-row-mx-15 text-Shal-chime01 text-justify">
                     <div class="col">
@@ -139,8 +158,12 @@
             <div class="container section5">
                 <div class="row custom-row-mx-15 justify-content-between">
                     <div class="col-4">
-                        <div class="row img-Shal-cjcuTitle01"></div>
-                        <div class="row img-Shal-cjcuTitle02"></div>
+                        <div class="row">
+                            <img src="./img/Shal/Shal-cjcuTitle01.png" alt="台鐵唯一">
+                        </div>
+                        <div class="row img-Shal-cjcuTitle02">
+                            <img src="./img/Shal/Shal-cjcuTitle02.png" alt="四個字的車站 長榮大學站">
+                        </div>
                     </div>
                     <div class="col-6 text-Shal-cjcu01 text-justify">
                         <p><span>|</span>長榮大學位於台南歸仁，鄰近高鐵、中山高、南二高及機場，校門口設有台鐵沙崙支線「長榮大學站」，是全國校園內唯一有火車站的大學，位居交通樞紐。
@@ -148,6 +171,7 @@
                     </div>
                 </div>
                 <div class="row custom-row-mx-15 rounded img-Shal-cjcu01">
+                    <img src="./img/Shal/Shal-cjcu01.jpg" alt="長榮大學站">
                 </div>
             </div>
         </section>
@@ -157,24 +181,36 @@
                 <div class="row custom-row-mx-15">
                     <div class="col-1">
                         <!-- Add Arrows -->
-                        <div class="swiper-button-prev"><img src="./img/main/main-btnL.png" alt=""></div>
+                        <div class="swiper-button-prev"><img src="./img/main/main-btnL.png" alt="往前一支線"></div>
                     </div>
                     <div class="col-10 m-auto">
                         <!-- Swiper: Loop Mode with Multiple Slides Per Group -->
                         <div class="swiper-container">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide img-main-btn img-btn-Neiw"></div>
-                                <div class="swiper-slide img-main-btn img-btn-Liuj"></div>
-                                <div class="swiper-slide img-main-btn img-btn-Jiji"></div>
-                                <div class="swiper-slide img-main-btn img-btn-Shal"></div>
-                                <div class="swiper-slide img-main-btn img-btn-Shen"></div>
-                                <div class="swiper-slide img-main-btn img-btn-Ping"></div>
+                                <div class="swiper-slide img-main-btn">
+                                    <img src="./img/main/main-btn-Neiw.png" alt="內灣線">
+                                </div>
+                                <div class="swiper-slide img-main-btn">
+                                    <img src="./img/main/main-btn-Liuj.png" alt="六家線">
+                                </div>
+                                <div class="swiper-slide img-main-btn">
+                                    <img src="./img/main/main-btn-Jiji.png" alt="集集線">
+                                </div>
+                                <div class="swiper-slide img-main-btn">
+                                    <img src="./img/main/main-btn-Shal.png" alt="沙崙線">
+                                </div>
+                                <div class="swiper-slide img-main-btn">
+                                    <img src="./img/main/main-btn-Shen.png" alt="深澳線">
+                                </div>
+                                <div class="swiper-slide img-main-btn">
+                                    <img src="./img/main/main-btn-Ping.png" alt="平溪線">
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-1">
                         <!-- Add Arrows -->
-                        <div class="swiper-button-next"><img src="./img/main/main-btnR.png" alt=""></div>
+                        <div class="swiper-button-next"><img src="./img/main/main-btnR.png" alt="往後一支線"></div>
                     </div>
                 </div>
             </div>
