modify index, 沙崙線
1. 調整跑馬燈, 疊圖
2. class

--- a/index.html
+++ b/index.html
@@ -80,14 +80,38 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col">
+                        <div class="col-2"></div>
+                        <div class="col-9">
+                            <div class="img-index-mg"><img src="./img/index/index-mq.png" alt="木製跑馬燈框"></div>
+                            <div class="marquee"><img src="./img/index/index-mqText.png" alt="跑馬燈文字"></div>
                         </div>
+
                     </div>
                 </div>
             </div>
         </section>
         <section>
-            <div class="container index2"></div>
+            <div class="container index2">
+                <div class="row">
+                    <div class="col-2">
+                        <a href="./Neiw.html"><img src="./img/index/index-btn-Neiw.png" alt="前進內灣線"></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="./Liuj.html"><img src="./img/index/index-btn-Liuj.png" alt="前進六家線"></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="./Jiji.html"><img src="./img/index/index-btn-Jiji.png" alt="前進集集線"></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="./Shal.html"><img src="./img/index/index-btn-Shal.png" alt="前進沙崙線"></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="./Shen.html"><img src="./img/index/index-btn-Shen.png" alt="前進深澳線"></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="./Ping.html"><img src="./img/index/index-btn-Ping.png" alt="前進平溪線"></a></div>
+                </div>
+            </div>
         </section>
     </main>
 
@@ -108,10 +132,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
+    <!-- jQuery-Marquee JS -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery.marquee@1.5.0/jquery.marquee.min.js" type="text/javascript">
+    </script>
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
 
-    <script src="./js/script.js"></script>
+    <script src="./js/index_script.js"></script>
 </body>
 
 </html>
