--- a/Shal.html
+++ b/Shal.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>鐵支路 | 沙崙支線</title>
+    <title>沙崙支線 | 鐵支路</title>
 
     <!-- Web Font -->
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC|Share+Tech+Mono&display=swap" rel="stylesheet">
@@ -24,9 +24,9 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark nav-white">
+        <nav class="navbar navbar-expand-xl navbar-dark nav-white">
             <div class="container">
-                <a class="navbar-brand p-0" href="./index.html">
+                <a class="navbar-brand py-0" href="./index.html">
                     <img src="./img/logo.png" alt="鐵路 支線 鐵支路 Logo"></a>
                 <!-- 漢堡條 -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -67,24 +67,28 @@
         <!-- 電子看板+地圖 -->
         <section>
             <div class="container section1">
-                <div class="row custom-row-mx-15 img-main-digibar">
-                    <div class="col-9 m-auto marquee"></div>
-                    <div class="col-1 m-auto localweather"></div>
-                    <div class="col-2 localtime"></div>
+                <div class="row mx-0">
+                    <div class="col-9">
+                        <div class="img-main-digibar"><img src="./img/main/main-digibar.png" alt="數位板跑馬燈框"></div>
+                        <div class="marquee"></div>
+                    </div>
+                    <div class="col-1 my-2 px-0 localweather"></div>
+                    <div class="col-2 my-2 px-0 localtime"></div>
                 </div>
-                <div class="row custom-row-mx-15 justify-content-center">
-                    <div class="col-3 img-main-map">
+
+                <div class="row mx-0 px-3 justify-content-center">
+                    <div class="col-3 px-0 img-main-map">
                         <img src="./img/Shal/Shal-staBtn1st.png" alt="沙崙線 中洲站">
                         <p class="m-0 ml-4">中洲站</p>
                     </div>
-                    <div class="col-2 img-main-map">
+                    <div class="col-2 px-0 img-main-map">
                         <img src="./img/Shal/Shal-staBtnArrow.png" alt="經由">
                     </div>
-                    <div class="col-3 img-main-map">
+                    <div class="col-3 px-0 img-main-map">
                         <img src="./img/Shal/Shal-staBtn1st.png" alt="沙崙線 長榮大學站">
                         <p class="m-0 ml-4">長榮大學站</p>
                     </div>
-                    <div class="col-2 img-main-map">
+                    <div class="col-2 px-0 img-main-map">
                         <img src="./img/Shal/Shal-staBtnlast.png" alt="沙崙線 沙崙站">
                         <p class="m-0 ml-4">沙崙站</p>
                     </div>
@@ -95,23 +99,25 @@
         <section>
             <div class="container-fluid img-main-bgi">
                 <div class="container section2">
-                    <div class="row custom-row-mx-15 ">
+                    <div class="row mx-0 px-3">
                         <img src="./img/Shal/main-Shal-title.png" alt="沙崙支旅">
                     </div>
-                    <div class="row custom-row-mx-15 text-main-cotent text-justify">
+                    <div class="row mx-0 text-main-cotent text-justify">
                         <div class="col">
-                            <p><span>|</span>臺鐵為了方便旅客轉乘高鐵，於民國100年1月2日正式啟用，臺鐵沙崙線列車取代原本搭高鐵接駁巴士，交通時間由原本50分鐘縮短至22分鐘。沙崙線全程皆為高架，還開了首例橫跨國道一號，為臺鐵捷運化轉型實例。特別的是路線還經過長榮大學內，還能搭到別具臺南特色的彩繪圖案列車，讓你的接駁時刻更有樂趣！
+                            <p class="my-0">
+                                <span>|</span>臺鐵為了方便旅客轉乘高鐵，於民國100年1月2日正式啟用，臺鐵沙崙線列車取代原本搭高鐵接駁巴士，交通時間由原本50分鐘縮短至22分鐘。沙崙線全程皆為高架，還開了首例橫跨國道一號，為臺鐵捷運化轉型實例。特別的是路線還經過長榮大學內，還能搭到別具臺南特色的彩繪圖案列車，讓你的接駁時刻更有樂趣！
                             </p>
                         </div>
                     </div>
-                    <div class="row custom-row-mx-15">
+                    <div class="row mx-0">
                         <div class="col">
-                            <img class="img-main-km" src="./img/Shal/main-Shal-km.png" alt="支線總長為5.3公里">
+                            <div class="img-main-km"><img src="./img/Shal/main-Shal-km.png" alt="支線總長為5.3公里"></div>
                         </div>
                     </div>
-                    <div class="row custom-row-mx-15">
-                        <div class="col img-main-line">
-                            <img class="img-main-train" src="./img/Shal/main-Shal-train.png" alt="台鐵列車">
+                    <div class="row mx-0">
+                        <div class="col">
+                            <div class="img-main-line"><img src="./img/Shal/main-Shal-line.png" alt="起站中洲站 迄站沙崙站"></div>
+                            <div class="img-main-train"><img src="./img/Shal/main-Shal-train.png" alt="台鐵列車"></div>
                         </div>
                     </div>
                 </div>
@@ -128,7 +134,7 @@
                         <img src="./img/Shal/Shal-chimeTitle02.png" alt="支線沙崙站 轉乘 西部幹線保安站">
                     </div>
                 </div>
-                <div class="row custom-row-mx-15">
+                <div class="row">
                     <div class="col-12 rounded img-Shal-chime01">
                         <img src="./img/Shal/Shal-chime01.jpg" alt="夜晚的奇美博物館">
                     </div>
@@ -232,6 +238,9 @@
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <!-- jQuery-Marquee JS -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery.marquee@1.5.0/jquery.marquee.min.js" type="text/javascript">
     </script>
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
