modify 沙崙線class, index navbar

--- a/Shal.html
+++ b/Shal.html
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-expand-xl navbar-dark nav-white">
             <div class="container">
                 <a class="navbar-brand py-0" href="./index.html">
-                    <img src="./img/logo.png" alt="鐵路 支線 鐵支路 Logo"></a>
+                    <img src="./img/logo.png" alt="台鐵 鐵路 支線 鐵支路 Logo"></a>
                 <!-- 漢堡條 -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -67,28 +67,28 @@
         <!-- 電子看板+地圖 -->
         <section>
             <div class="container section1">
-                <div class="row mx-0">
+                <div class="row">
                     <div class="col-9">
                         <div class="img-main-digibar"><img src="./img/main/main-digibar.png" alt="數位板跑馬燈框"></div>
                         <div class="marquee"></div>
                     </div>
-                    <div class="col-1 my-2 px-0 localweather"></div>
-                    <div class="col-2 my-2 px-0 localtime"></div>
+                    <div class="col-1 localweather"></div>
+                    <div class="col-2 localtime"></div>
                 </div>
 
-                <div class="row mx-0 px-3 justify-content-center">
-                    <div class="col-3 px-0 img-main-map">
+                <div class="row px-3 justify-content-center">
+                    <div class="col-3 px-0 d-flex align-items-center">
                         <img src="./img/Shal/Shal-staBtn1st.png" alt="沙崙線 中洲站">
                         <p class="m-0 ml-4">中洲站</p>
                     </div>
-                    <div class="col-2 px-0 img-main-map">
+                    <div class="col-2 px-0 d-flex align-items-center">
                         <img src="./img/Shal/Shal-staBtnArrow.png" alt="經由">
                     </div>
-                    <div class="col-3 px-0 img-main-map">
+                    <div class="col-3 px-0 d-flex align-items-center">
                         <img src="./img/Shal/Shal-staBtn1st.png" alt="沙崙線 長榮大學站">
                         <p class="m-0 ml-4">長榮大學站</p>
                     </div>
-                    <div class="col-2 px-0 img-main-map">
+                    <div class="col-2 px-0 d-flex align-items-center">
                         <img src="./img/Shal/Shal-staBtnlast.png" alt="沙崙線 沙崙站">
                         <p class="m-0 ml-4">沙崙站</p>
                     </div>
@@ -99,22 +99,22 @@
         <section>
             <div class="container-fluid img-main-bgi">
                 <div class="container section2">
-                    <div class="row mx-0 px-3">
-                        <img src="./img/Shal/main-Shal-title.png" alt="沙崙支旅">
+                    <div class="row">
+                        <div class="col"><img src="./img/Shal/main-Shal-title.png" alt="沙崙支旅"></div>
                     </div>
-                    <div class="row mx-0 text-main-cotent text-justify">
+                    <div class="row text-justify text-main-cotent">
                         <div class="col">
                             <p class="my-0">
                                 <span>|</span>臺鐵為了方便旅客轉乘高鐵，於民國100年1月2日正式啟用，臺鐵沙崙線列車取代原本搭高鐵接駁巴士，交通時間由原本50分鐘縮短至22分鐘。沙崙線全程皆為高架，還開了首例橫跨國道一號，為臺鐵捷運化轉型實例。特別的是路線還經過長榮大學內，還能搭到別具臺南特色的彩繪圖案列車，讓你的接駁時刻更有樂趣！
                             </p>
                         </div>
                     </div>
-                    <div class="row mx-0">
-                        <div class="col">
-                            <div class="img-main-km"><img src="./img/Shal/main-Shal-km.png" alt="支線總長為5.3公里"></div>
+                    <div class="row justify-content-center">
+                        <div class="col-6">
+                            <div class="text-center img-main-km"><img src="./img/Shal/main-Shal-km.png" alt="支線總長為5.3公里"></div>
                         </div>
                     </div>
-                    <div class="row mx-0">
+                    <div class="row">
                         <div class="col">
                             <div class="img-main-line"><img src="./img/Shal/main-Shal-line.png" alt="起站中洲站 迄站沙崙站"></div>
                             <div class="img-main-train"><img src="./img/Shal/main-Shal-train.png" alt="台鐵列車"></div>
@@ -126,22 +126,22 @@
         <!-- 版型A -->
         <section>
             <div class="container section3">
-                <div class="row custom-row-mx-15">
-                    <div class="col-6">
+                <div class="row">
+                    <div class="col-6 text-left">
                         <img src="./img/Shal/Shal-chimeTitle01.png" alt="壯觀的奇美博物館">
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 text-right">
                         <img src="./img/Shal/Shal-chimeTitle02.png" alt="支線沙崙站 轉乘 西部幹線保安站">
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 rounded img-Shal-chime01">
-                        <img src="./img/Shal/Shal-chime01.jpg" alt="夜晚的奇美博物館">
+                    <div class="col">
+                        <img class="rounded-lg" src="./img/Shal/Shal-chime01.jpg" alt="夜晚的奇美博物館">
                     </div>
                 </div>
-                <div class="row custom-row-mx-15 text-Shal-chime01 text-justify">
+                <div class="row text-justify text-Shal-chime01">
                     <div class="col">
-                        <p><span>|</span>當看到這樣的景象，會以為這是歐洲某處宮殿的景致吧，走過陽光下映著彩虹的阿波羅噴泉，穿過護城河上的橋墩，勇猛優雅的白色獅頭一字排開，橋面上莊嚴的奧林帕斯眾神也整齊陳列，走過橋面，博物館正面入口採高聳的圓頂造型及各面不同的希臘列柱設計，這樣的氣勢更能襯托出典藏寶物宮殿的華麗。
+                        <p class="my-0"><span>|</span>當看到這樣的景象，會以為這是歐洲某處宮殿的景致吧，走過陽光下映著彩虹的阿波羅噴泉，穿過護城河上的橋墩，勇猛優雅的白色獅頭一字排開，橋面上莊嚴的奧林帕斯眾神也整齊陳列，走過橋面，博物館正面入口採高聳的圓頂造型及各面不同的希臘列柱設計，這樣的氣勢更能襯托出典藏寶物宮殿的華麗。
                         </p>
                     </div>
                 </div>
@@ -150,10 +150,10 @@
         <!-- 版型B -->
         <section>
             <div class="container section4">
-                <div class="row custom-row-mx-15 rounded img-Shal-chime02">
-                    <div class="col-4 m-auto text-Shal-chime02 text-justify">
-                        <p class="m-0">安置於博物館建築物最高點的「榮耀天使」雕塑，是臨摹法國雕塑家路易‧巴里亞斯(Louis-Ernest
-                            Barrias)的作品，這座手持桂冠和號角的榮耀天使，將永遠佇立於奇美館建築的最頂端，象徵守護這塊土地，榮耀世間的美好人事物。在2015年開幕的台南都會公園奇美博物館，主建築正面全長150公尺寬，高42公尺，耗資13億，是奇美集團的許文龍先生建造完成後捐贈給台南市的大禮物，開幕後也成為全台灣遊客甚至是國外遊客的必到之處。
+                <div class="row">
+                    <div class="col">
+                        <img class="rounded-lg" src="./img/Shal/Shal-chime02.jpg" alt="榮耀天使 路易‧巴里亞斯 Louis-Ernest Barrias 奇美館 許文龍">
+                        <p class="col-4 my-0 text-justify">安置於博物館建築物最高點的「榮耀天使」雕塑，是臨摹法國雕塑家路易‧巴里亞斯(Louis-Ernest Barrias)的作品，這座手持桂冠和號角的榮耀天使，將永遠佇立於奇美館建築的最頂端，象徵守護這塊土地，榮耀世間的美好人事物。在2015年開幕的台南都會公園奇美博物館，主建築正面全長150公尺寬，高42公尺，耗資13億，是奇美集團的許文龍先生建造完成後捐贈給台南市的大禮物，開幕後也成為全台灣遊客甚至是國外遊客的必到之處。
                         </p>
                     </div>
                 </div>
@@ -162,29 +162,29 @@
         <!-- 版型C -->
         <section>
             <div class="container section5">
-                <div class="row custom-row-mx-15 justify-content-between">
+                <div class="row justify-content-between">
                     <div class="col-4">
-                        <div class="row">
+                        <div>
                             <img src="./img/Shal/Shal-cjcuTitle01.png" alt="台鐵唯一">
                         </div>
-                        <div class="row img-Shal-cjcuTitle02">
+                        <div>
                             <img src="./img/Shal/Shal-cjcuTitle02.png" alt="四個字的車站 長榮大學站">
                         </div>
                     </div>
-                    <div class="col-6 text-Shal-cjcu01 text-justify">
-                        <p><span>|</span>長榮大學位於台南歸仁，鄰近高鐵、中山高、南二高及機場，校門口設有台鐵沙崙支線「長榮大學站」，是全國校園內唯一有火車站的大學，位居交通樞紐。
+                    <div class="col-6 text-justify">
+                        <p class="my-0"><span>|</span>長榮大學位於台南歸仁，鄰近高鐵、中山高、南二高及機場，校門口設有台鐵沙崙支線「長榮大學站」，是全國校園內唯一有火車站的大學，位居交通樞紐。
                         </p>
                     </div>
                 </div>
-                <div class="row custom-row-mx-15 rounded img-Shal-cjcu01">
-                    <img src="./img/Shal/Shal-cjcu01.jpg" alt="長榮大學站">
+                <div class="row">
+                    <img class="rounded-lg" src="./img/Shal/Shal-cjcu01.jpg" alt="長榮大學站">
                 </div>
             </div>
         </section>
         <!-- 下一支線swiper -->
         <section>
             <div class="container section6">
-                <div class="row custom-row-mx-15">
+                <div class="row">
                     <div class="col-1">
                         <!-- Add Arrows -->
                         <div class="swiper-button-prev"><img src="./img/main/main-btnL.png" alt="往前一支線"></div>
@@ -224,7 +224,7 @@
     </main>
     <footer class="text-center">
         <div class="container">
-            <p>Copyright &copy; 2019 僅供RWD互動設計前端職訓班教學使用</p>
+            <p class="my-0">Copyright &copy; 2019 僅供RWD互動設計前端職訓班教學使用</p>
         </div>
     </footer>
 
