--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark nav-white">
+        <nav class="navbar navbar-expand-xl navbar-dark nav-white nav1">
             <div class="container">
-                <a class="navbar-brand p-0" href="./index.html">
-                    <img src="./img/logo.png" alt="鐵路 支線 鐵支路 Logo"></a>
+                <a class="navbar-brand py-0" href="./index.html">
+                    <img src="./img/logo.png" alt="台鐵 鐵路 支線 鐵支路 Logo"></a>
                 <!-- 漢堡條 -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -62,10 +62,21 @@
                 </div>
             </div>
         </nav>
+        <nav class="navbar navbar-expand-xl navbar-light nav-white py-0 pb-4 nav2">
+            <div class="container">
+                <div class="collapse navbar-collapse justify-content-center">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <img src="./img/index/index-navpoint.png" alt="">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
         <section>
-            <div class="container-fluid p-0 img-index-bgi">
+            <div class="container-fluid img-index-bgi">
                 <div class="container index1">
                     <div class="row">
                         <div class="col-6">
@@ -73,10 +84,11 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-8 text-index-logo text-justify">
-                            <p>轟隆轟隆，乘著火車，台灣各地的山海美景一覽無遺，過了山洞準備迎接浩瀚海景，或是海線聽濤聲、嗅海味，木造車站更散發濃濃懷舊風情。而昔日運煤礦及木材的鐵道如今穿越鄉間來到純樸的小鎮，又或是攀山越嶺進入森林，現在，我們將帶領你深入探索每條支線的祕站風景與故事。
+                        <div class="col-8 text-justify">
+                            <p class="my-0">
+                                轟隆轟隆，乘著火車，台灣各地的山海美景一覽無遺，過了山洞準備迎接浩瀚海景，或是海線聽濤聲、嗅海味，木造車站更散發濃濃懷舊風情。而昔日運煤礦及木材的鐵道如今穿越鄉間來到純樸的小鎮，又或是攀山越嶺進入森林，現在，我們將帶領你深入探索每條支線的祕站風景與故事。
                             </p>
-                            <p>本列車目前位於鐵支路總站，可自由選擇各支線。</p>
+                            <p class="my-0">本列車目前位於鐵支路總站，可自由選擇各支線。</p>
                         </div>
                     </div>
                     <div class="row">
@@ -114,15 +126,15 @@
             </div>
         </section>
     </main>
-
     <footer class="text-center">
         <div class="container">
-            <p>Copyright &copy; 2019 僅供RWD互動設計前端職訓班教學使用</p>
+            <p class="my-0">Copyright &copy; 2019 僅供RWD互動設計前端職訓班教學使用</p>
         </div>
     </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
