--- a/Shal.html
+++ b/Shal.html
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-expand-xl navbar-dark nav-white">
             <div class="container">
                 <a class="navbar-brand py-0" href="./index.html">
-                    <img src="./img/logo.png" alt="台鐵 鐵路 支線 鐵支路 Logo"></a>
+                    <img src="./img/main/Logo.png" alt="台鐵 鐵路 支線 鐵支路 Logo"></a>
                 <!-- 漢堡條 -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -75,7 +75,6 @@
                     <div class="col-1 localweather"></div>
                     <div class="col-2 localtime"></div>
                 </div>
-
                 <div class="row px-3 justify-content-center">
                     <div class="col-3 px-0 d-flex align-items-center">
                         <img src="./img/Shal/Shal-staBtn1st.png" alt="沙崙線 中洲站">
@@ -111,7 +110,8 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-6">
-                            <div class="text-center img-main-km"><img src="./img/Shal/main-Shal-km.png" alt="支線總長為5.3公里"></div>
+                            <div class="text-center img-main-km"><img src="./img/Shal/main-Shal-km.png"
+                                    alt="支線總長為5.3公里"></div>
                         </div>
                     </div>
                     <div class="row">
@@ -141,7 +141,8 @@
                 </div>
                 <div class="row text-justify text-Shal-chime01">
                     <div class="col">
-                        <p class="my-0"><span>|</span>當看到這樣的景象，會以為這是歐洲某處宮殿的景致吧，走過陽光下映著彩虹的阿波羅噴泉，穿過護城河上的橋墩，勇猛優雅的白色獅頭一字排開，橋面上莊嚴的奧林帕斯眾神也整齊陳列，走過橋面，博物館正面入口採高聳的圓頂造型及各面不同的希臘列柱設計，這樣的氣勢更能襯托出典藏寶物宮殿的華麗。
+                        <p class="my-0">
+                            <span>|</span>當看到這樣的景象，會以為這是歐洲某處宮殿的景致吧，走過陽光下映著彩虹的阿波羅噴泉，穿過護城河上的橋墩，勇猛優雅的白色獅頭一字排開，橋面上莊嚴的奧林帕斯眾神也整齊陳列，走過橋面，博物館正面入口採高聳的圓頂造型及各面不同的希臘列柱設計，這樣的氣勢更能襯托出典藏寶物宮殿的華麗。
                         </p>
                     </div>
                 </div>
@@ -152,8 +153,10 @@
             <div class="container section4">
                 <div class="row">
                     <div class="col">
-                        <img class="rounded-lg" src="./img/Shal/Shal-chime02.jpg" alt="榮耀天使 路易‧巴里亞斯 Louis-Ernest Barrias 奇美館 許文龍">
-                        <p class="col-4 my-0 text-justify">安置於博物館建築物最高點的「榮耀天使」雕塑，是臨摹法國雕塑家路易‧巴里亞斯(Louis-Ernest Barrias)的作品，這座手持桂冠和號角的榮耀天使，將永遠佇立於奇美館建築的最頂端，象徵守護這塊土地，榮耀世間的美好人事物。在2015年開幕的台南都會公園奇美博物館，主建築正面全長150公尺寬，高42公尺，耗資13億，是奇美集團的許文龍先生建造完成後捐贈給台南市的大禮物，開幕後也成為全台灣遊客甚至是國外遊客的必到之處。
+                        <img class="rounded-lg" src="./img/Shal/Shal-chime02.jpg"
+                            alt="榮耀天使 路易‧巴里亞斯 Louis-Ernest Barrias 奇美館 許文龍">
+                        <p class="col-4 my-0 text-justify">安置於博物館建築物最高點的「榮耀天使」雕塑，是臨摹法國雕塑家路易‧巴里亞斯(Louis-Ernest
+                            Barrias)的作品，這座手持桂冠和號角的榮耀天使，將永遠佇立於奇美館建築的最頂端，象徵守護這塊土地，榮耀世間的美好人事物。在2015年開幕的台南都會公園奇美博物館，主建築正面全長150公尺寬，高42公尺，耗資13億，是奇美集團的許文龍先生建造完成後捐贈給台南市的大禮物，開幕後也成為全台灣遊客甚至是國外遊客的必到之處。
                         </p>
                     </div>
                 </div>
@@ -172,7 +175,8 @@
                         </div>
                     </div>
                     <div class="col-6 text-justify">
-                        <p class="my-0"><span>|</span>長榮大學位於台南歸仁，鄰近高鐵、中山高、南二高及機場，校門口設有台鐵沙崙支線「長榮大學站」，是全國校園內唯一有火車站的大學，位居交通樞紐。
+                        <p class="my-0">
+                            <span>|</span>長榮大學位於台南歸仁，鄰近高鐵、中山高、南二高及機場，校門口設有台鐵沙崙支線「長榮大學站」，是全國校園內唯一有火車站的大學，位居交通樞紐。
                         </p>
                     </div>
                 </div>
