--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-expand-xl navbar-dark nav-white nav1">
             <div class="container">
                 <a class="navbar-brand py-0" href="./index.html">
-                    <img src="./img/logo.png" alt="台鐵 鐵路 支線 鐵支路 Logo"></a>
+                    <img src="./img/main/Logo.png" alt="台鐵 鐵路 支線 鐵支路 Logo"></a>
                 <!-- 漢堡條 -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -80,7 +80,7 @@
                 <div class="container index1">
                     <div class="row">
                         <div class="col-6">
-                            <div class="img-index-logo">鐵支路</div>
+                            <img src="./img/main/Logo.png" alt="">
                         </div>
                     </div>
                     <div class="row">
