--- a/Shal.html
+++ b/Shal.html
@@ -69,11 +69,17 @@
             <div class="container section1">
                 <div class="row">
                     <div class="col-9">
-                        <div class="img-main-digibar"><img src="./img/main/main-digibar.png" alt="數位板跑馬燈框"></div>
+                        <div class="img-main-digibar">
+                            <img src="./img/main/main-digibar-Mq01.png" alt="數位板跑馬燈框">
+                            <img src="./img/main/main-digibar-Mq02.png" alt="數位板跑馬燈框"></div>
                         <div class="marquee"></div>
                     </div>
-                    <div class="col-1 localweather"></div>
-                    <div class="col-2 localtime"></div>
+                    <div class="col-3">
+                        <div class="img-main-digibar">
+                            <img src="./img/main/main-digibar-api.png" alt="數位板天氣現象 現在時間"></div>
+                        <div class="localweather"></div>
+                        <div class="localtime"></div>
+                    </div>
                 </div>
                 <div class="row px-3 justify-content-center">
                     <div class="col-3 px-0 d-flex align-items-center">
